@@ -1,3 +1,4 @@
+* Remove IDENTIFIER regexp on ir.model and ir.model.field
 * Enforce suffix and prefix to have id or name
 * Sanitize path in file_open (CVE-2016-1242)
 * Prevent read of user password hash (CVE-2016-1241)
